--- a/.github/workflows/reusable-create-release.yml
+++ b/.github/workflows/reusable-create-release.yml
@@ -13,7 +13,7 @@ permissions:
     
 jobs:
   release:
-    if: startsWith(github.ref, 'refs/tags/')
+    # if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -21,7 +21,7 @@ jobs:
 
       - name: Tag and Push
         run: |
-          VERSION=${{ github.event.inputs.version_to_publish }}
+          VERSION=${{ inputs.version_to_publish }}
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
           git tag -a v$VERSION -m "Release v$VERSION"
@@ -36,6 +36,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create Release
-        uses: mikepenz/action-gh-release@v1 #softprops/action-gh-release
+        uses: mikepenz/action-gh-release@v0.2.0-a03 #softprops/action-gh-release
         with:
+          tag_name: v${{ inputs.version_to_publish }}
           body: ${{ steps.build_changelog.outputs.changelog }}
