--- a/.github/workflows/reusable-slack-notifs.yml
+++ b/.github/workflows/reusable-slack-notifs.yml
@@ -35,23 +35,23 @@ jobs:
           channel-id: ${{ secrets.channel-name }}
           payload: |
             {
-              "text": inputs.short-desc,
+              "text": "${{ github.event.inputs.short-desc }}",
               "blocks": [
                 { "type": "divider" },
                 {
                   "type": "image",
                   "title": {
                     "type": "plain_text",
-                    "text": inputs.title
+                    "text": "${{ github.event.inputs.title }}"
                   },
-                  "image_url": inputs.img-url,
-                  "alt_text": inputs.img-alt-text
+                  "image_url": "${{ github.event.inputs.img-url }}",
+                  "alt_text": "${{ github.event.inputs.img-alt-text }}"
                 },
                 {
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": inputs.short-desc 
+                    "text": "${{ github.event.inputs.short-desc }}" 
                   }
                 }
               ]
