--- a/.github/workflows/reusable-ecr-build-push.yml
+++ b/.github/workflows/reusable-ecr-build-push.yml
@@ -31,6 +31,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
 
+      - name: go test
+        run: |
+          go test ./api/... -v
+
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4.0.2 
         with:
