--- a/.github/workflows/reusable-create-release.yml
+++ b/.github/workflows/reusable-create-release.yml
@@ -3,10 +3,10 @@ name: Reusable workflow to create release in GitHub
 on:
   workflow_call:
     inputs:
-      version_to_publish:
+      tag_name:
         type: string
         required: true
-        description: 'Version to be published'
+        description: "Tag name to be published"
 
 permissions:
   contents: write
@@ -32,12 +32,13 @@ jobs:
       - name: Tag and Push
         id: tag_and_push
         run: |
-          VERSION=${{ inputs.version_to_publish }}
+          TAG_NAME=${{ inputs.tag_name}}
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
-          git tag -a v$VERSION -m "Release v$VERSION"
-          git push origin v$VERSION
-          echo "toTag=v$VERSION" >> $GITHUB_ENV
+          git tag -a $TAG_NAME -m "Release $TAG_NAME"
+          git push origin $TAG_NAME
+          echo "toTag=$TAG_NAME" >> $GITHUB_ENV
+          cat $GITHUB_ENV
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -50,5 +51,5 @@ jobs:
       - name: Create Release
         uses: mikepenz/action-gh-release@v0.2.0-a03 #softprops/action-gh-release
         with:
-          tag_name: v${{ inputs.version_to_publish }}
+          tag_name: ${{ inputs.tag_name }}
           body: ${{ steps.build_changelog.outputs.changelog }}
