--- a/.github/workflows/reusable-create-release.yml
+++ b/.github/workflows/reusable-create-release.yml
@@ -43,12 +43,12 @@ jobs:
 
       - name: Build Changelog
         id: build_changelog
-        uses: mikepenz/release-changelog-builder-action@v5.0.0-a04
+        uses: mikepenz/release-changelog-builder-action@1eff87d3e9087a5d44e572b4c431e500dd2124f8
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create Release
-        uses: mikepenz/action-gh-release@v1 #softprops/action-gh-release
+        uses: mikepenz/action-gh-release@a74c6b72af54cfa997e81df42d94703d6313a2d0 #softprops/action-gh-release
         with:
           tag_name: ${{ inputs.tag_name }}
           body: ${{ steps.build_changelog.outputs.changelog }}
