--- a/.github/workflows/reusable-lint-go-workflow.yml
+++ b/.github/workflows/reusable-lint-go-workflow.yml
@@ -25,4 +25,4 @@ jobs:
         run: |
           echo "Running golangci-lint"
           go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
-          golangci-lint run
+          golangci-lint run --timeout 5m
