--- a/.github/workflows/reusable-build-unit-test-workflow.yml
+++ b/.github/workflows/reusable-build-unit-test-workflow.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Test
         run: |
-          pnpm run test:unit
+          pnpm test:unit
 
       - name: Build
         run: 
