--- a/.github/workflows/reusable-build-test-workflow.yml
+++ b/.github/workflows/reusable-build-test-workflow.yml
@@ -10,25 +10,9 @@ on:
         required: true
         type: string
     secrets:
-      RPC_PROVIDER_URL:
-        required: true
       WALLET_PRIVATE_KEY:
         required: true
       TEST_WALLET_ADDRESS:
-        required: true
-      SEPOLIA_RPC_PROVIDER_URL:
-        required: true
-      TEST_SEPOLIA_RPC_PROVIDER_URL:
-        required: true
-      SEPOLIA_WALLET_PRIVATE_KEY:
-        required: true
-      SEPOLIA_TEST_WALLET_ADDRESS:
-        required: true
-      STORY_TEST_NET_RPC_PROVIDER_URL:
-        required: true
-      STORY_TEST_NET_WALLET_PRIVATE_KEY:
-        required: true
-      STORY_TEST_NET_TEST_WALLET_ADDRESS:
         required: true
 
 jobs:
@@ -43,16 +27,8 @@ jobs:
       matrix:
         node-version: [20.0.0]
     env:
-      RPC_PROVIDER_URL: ${{ secrets.RPC_PROVIDER_URL }}
       WALLET_PRIVATE_KEY: ${{ secrets.WALLET_PRIVATE_KEY }}
       TEST_WALLET_ADDRESS: ${{ secrets.TEST_WALLET_ADDRESS }}
-      SEPOLIA_RPC_PROVIDER_URL: ${{ secrets.SEPOLIA_RPC_PROVIDER_URL }}
-      TEST_SEPOLIA_RPC_PROVIDER_URL: ${{ secrets.TEST_SEPOLIA_RPC_PROVIDER_URL }}
-      SEPOLIA_WALLET_PRIVATE_KEY: ${{ secrets.SEPOLIA_WALLET_PRIVATE_KEY }}
-      SEPOLIA_TEST_WALLET_ADDRESS: ${{ secrets.SEPOLIA_TEST_WALLET_ADDRESS }}
-      STORY_TEST_NET_RPC_PROVIDER_URL: ${{ secrets.STORY_TEST_NET_RPC_PROVIDER_URL }}
-      STORY_TEST_NET_WALLET_PRIVATE_KEY: ${{ secrets.STORY_TEST_NET_WALLET_PRIVATE_KEY }}
-      STORY_TEST_NET_TEST_WALLET_ADDRESS: ${{ secrets.STORY_TEST_NET_TEST_WALLET_ADDRESS }}
 
     steps:
       - name: Check out code
@@ -71,30 +47,14 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: pnpm
 
-      - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain@v1
-        with:
-          version: nightly
-
       - name: Install dependencies
-        run: |
-          pnpm install
+        run: pnpm install
 
       - name: Fix
-        run: |
-          pnpm fix
-
-      - name: Run Anvil
-        id: run_anvil
-        run: |
-          anvil --fork-url ${SEPOLIA_RPC_PROVIDER_URL} --silent &
-        continue-on-error: false
+        run: pnpm fix
 
       - name: Test
-        if: steps.run_anvil.outcome == 'success'
-        run: |
-          pnpm test
+        run: pnpm test
 
       - name: Build
-        run: 
-          pnpm build
+        run: pnpm build
