--- a/.github/workflows/reusable-build-unit-test-workflow.yml
+++ b/.github/workflows/reusable-build-unit-test-workflow.yml
@@ -10,7 +10,7 @@ on:
         required: true
         type: string
     secrets:
-      STORY_TEST_NET_WALLET_PRIVATE_KEY:
+      WALLET_PRIVATE_KEY:
         required: true
 
 jobs:
@@ -25,7 +25,7 @@ jobs:
       matrix:
         node-version: [20.0.0]
     env:
-      STORY_TEST_NET_WALLET_PRIVATE_KEY: ${{ secrets.STORY_TEST_NET_WALLET_PRIVATE_KEY }}
+      WALLET_PRIVATE_KEY: ${{ secrets.WALLET_PRIVATE_KEY }}
 
     steps:
       - name: Check out code
