--- a/.github/workflows/reusable-build-unit-test-workflow.yml
+++ b/.github/workflows/reusable-build-unit-test-workflow.yml
@@ -47,23 +47,14 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: pnpm
 
-      - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain@v1
-        with:
-          version: nightly
-
       - name: Install dependencies
-        run: |
-          pnpm install
+        run: pnpm install
 
       - name: Fix
-        run: |
-          pnpm fix
+        run: pnpm fix
 
       - name: Test
-        run: |
-          pnpm test
+        run: pnpm test
 
       - name: Build
-        run: 
-          pnpm build
+        run: pnpm build
