--- a/.github/workflows/reusable-build-python-unit-test-workflow.yml
+++ b/.github/workflows/reusable-build-python-unit-test-workflow.yml
@@ -43,6 +43,8 @@ jobs:
 
       - name: Install dependencies
         run: |
+          python -m venv .venv
+          source .venv/bin/activate
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest pytest-cov  # Common testing packages
