--- a/.github/workflows/reusable-build-python-integration-test-workflow.yml
+++ b/.github/workflows/reusable-build-python-integration-test-workflow.yml
@@ -46,8 +46,9 @@ jobs:
           python -m venv .venv
           source .venv/bin/activate
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt || exit `
           pip install pytest pytest-cov  # Common testing packages
+        shell: bash
 
       - name: Debug Installed Packages
         run: pip list
