--- a/.github/workflows/reusable-build-python-unit-test-workflow.yml
+++ b/.github/workflows/reusable-build-python-unit-test-workflow.yml
@@ -46,12 +46,13 @@ jobs:
           python -m venv .venv
           source .venv/bin/activate
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt || exit 1
           pip install pytest pytest-cov  # Common testing packages
+        shell: bash
       
       - name: Debug Installed Packages
         run: pip list
-        
+
       - name: Run Unit tests
         run: |
           pytest tests/unit/ --cov=./ --cov-report=xml
