--- a/.github/workflows/reusable-build-python-unit-test-workflow.yml
+++ b/.github/workflows/reusable-build-python-unit-test-workflow.yml
@@ -55,6 +55,7 @@ jobs:
 
       - name: Run Unit tests
         run: |
+          source .venv/bin/activate 
           pytest tests/unit/ --cov=./ --cov-report=xml
 
       - name: Build package
