--- a/.github/workflows/reusable-build-integration-test-workflow.yml
+++ b/.github/workflows/reusable-build-integration-test-workflow.yml
@@ -14,6 +14,8 @@ on:
         required: true
       TEST_WALLET_ADDRESS:
         required: true
+      JUDGE_PRIVATE_KEY:
+        required: true
 
 jobs:
   build_and_test:
