--- a/.github/workflows/reusable-gcp-image-build-worker.yml
+++ b/.github/workflows/reusable-gcp-image-build-worker.yml
@@ -25,6 +25,10 @@ on:
         required: false
         default: "."
         type: string
+      image_tag:
+        type: string
+        description: "The target image tag"
+        required: true
       env_vars:
         type: string
         description: "Environment variables in KEY=VAL format"
@@ -53,12 +57,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and Push Docker Image
+      - name: Prepare env
+        if: ${{ inputs.env_vars != '' }}
         run: |
           echo '${{ inputs.env_vars }}' > .env
+
+      - name: Build and Push Docker Image
+        run: |
           docker build \
             --push \
-            --tag gcr.io/${GCP_PROJECT_ID}/${{ inputs.app_name }}:${{ github.sha }} \
+            --tag gcr.io/${GCP_PROJECT_ID}/${{ inputs.app_name }}:${{ inputs.image_tag }} \
             -f "${{ inputs.dockerfile_path }}" \
             "${{ inputs.dockerfile_context }}"
-          rm .env
