--- a/.github/workflows/reusable-build-integration-test-workflow.yml
+++ b/.github/workflows/reusable-build-integration-test-workflow.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Test
         run: |
-          npm run test:integration
+          pnpm run test:integration
 
       - name: Build
         run: pnpm build
