--- a/.github/workflows/reusable-build-test-workflow.yml
+++ b/.github/workflows/reusable-build-test-workflow.yml
@@ -67,7 +67,7 @@ jobs:
           mv -f packages/core-sdk/mochawesome-report packages/core-sdk/mochawesome-report-${{ env.TIMESTAMP }}
           mv -f packages/core-sdk/mochawesome-report-${{ env.TIMESTAMP }}/mochawesome.html packages/core-sdk/mochawesome-report-${{ env.TIMESTAMP }}/mochawesome-${{ env.TIMESTAMP }}.html
 
-      - name: Integration Test Report
+      - name: Upload Integration Test Report
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 #v4.6.2
         with:
           name: integration-test-report-${{ env.TIMESTAMP }}
